# Zombie

./: README.md  cctest.sh  cloudlab.py  mmtest.sh  multi_client_benchmark.py
circ/: .gitignore  .gitmodules  Cargo.toml  DohAESAmortized_witness.json  README.md  auto.sh  download.py  generate.sh  packer  rust-toolchain.toml  test.sh
circ/examples/: circ.rs  run_zok.rs  run_zok_template.rs  test_im.rs  try.rs
circ/src/: lib.rs  zkmb.rs
circ/zkmb/: 0_URI.zok  0_URI_100.zok  0_URI_2000.zok  0_URI_2048.zok  0_URI_64.zok  1_email_100.zok  1_email_1000.zok  1_email_2000.zok  1_email_2048.zok  1_email_64.zok  2_date.zok  2_date_100.zok  2_date_2000.zok  2_date_2048.zok  2_date_64.zok  3_URIemail_100.zok  3_URIemail_1000.zok  3_URIemail_2000.zok  3_URIemail_2048.zok  3_URIemail_64.zok  AES.zok  AESChannelOpen.zok  ChaCha.zok  ChaCha1000.zok  ChaChaChannelOpen.zok  ChaCha_template.zok  DohAESAmortized.zok  (+51 more)
middlebox/: Cargo.toml  auto.sh  batch_16_proof  batch_16_regex_proof  batch_1_proof  batch_1_regex_proof  batch_2_proof  batch_32_proof  batch_4_proof  batch_4_regex_proof  batch_64_proof  batch_64_regex_proof  batch_8_proof  configure.sh  git_update.sh  iptables_configure.sh  log4rs.yaml
middlebox/src/: block_verify.rs  blocklist_checker.rs  main.rs  middlebox.rs  no_policy_baseline.rs  no_privacy_baseline.rs  packet_parse.rs  test_tcp_congestion_control.rs
prover/: .gitignore  README.md  benchmark.py  configure.sh  dnslog_500  dnslog_all  main.py  run_proxy.py  test.py
regex/: .gitignore  Makefile  README.txt  regex.cf
tlsserver/: csr_defaults.cnf  tlsserver.py
(+83 files in other folders)
