[package]
name = "middlebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfq = "0.2.5"
nickel = "0.11.0"
pnet = "0.31.0"
tls-parser = "0.11.0"
bincode = "1.3.3"
circ = { path = "../circ" }
serde = { version = "1.0.124", features = ["derive"] }
rusticata = { path = "./third_party/rusticata" }
env_logger = "0.9.1"
log = "0.4.17"
dns-parser = "0.8.0"
sha2 = "0.10.6"
chrono = "0.4.23"
log4rs = "1.2.0"
rand_distr = "0.4.3"
rand = "0.8.5"
chacha20poly1305 = "0.10.1"
rayon = "1.7.0"

[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-algebra-bench-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-std = { git = "https://github.com/arkworks-rs/std" }